samples/_failures_safe/1761246044_eecea8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc9a3093.c: In function ‘graph_reset_visited’:
./samples/SAFE/__tmp_dc9a3093.c:186:23: error: expected ‘]’ at end of input
  186 |         graph->nodes[i
      |                       ^
      |                       ]
./samples/SAFE/__tmp_dc9a3093.c:186:9: error: expected declaration or statement at end of input
  186 |         graph->nodes[i
      |         ^~~~~
./samples/SAFE/__tmp_dc9a3093.c:186:9: error: expected declaration or statement at end of input
